--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,5 @@
 DATABASE_URI=mongodb://127.0.0.1/payload-template-blank
 PAYLOAD_SECRET=YOUR_SECRET_HERE
+CLOUDINARY_CLOUD_NAME=hello
+CLOUDINARY_API_KEY=123
+CLOUDINARY_API_SECRET=123
